Added sample sine signal

--- a/LightMeter/LightMeterGui/LightMeter/LightMeter.csproj
+++ b/LightMeter/LightMeterGui/LightMeter/LightMeter.csproj
@@ -90,6 +90,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Class1.cs" />
+    <Compile Include="FilterButterworth.cs" />
+    <Compile Include="Kalman.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
