--- a/NoteKeeper/NoteKeeper/NoteKeeper.csproj
+++ b/NoteKeeper/NoteKeeper/NoteKeeper.csproj
@@ -54,6 +54,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AutoCompleteSearchControl.cs" />
+    <Compile Include="BoolToVisibilityConverter.cs" />
+    <Compile Include="FuzzySearchHelper.cs" />
+    <Compile Include="HighlightTextControl.cs" />
+    <Compile Include="MainVM.cs" />
+    <Compile Include="NoteVM.cs" />
+    <Compile Include="ObservableObject.cs" />
+    <Compile Include="RelayCommand.cs" />
+    <Compile Include="TagVM.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
