--- a/NoteKeeper/NoteKeeper/NoteKeeper.csproj
+++ b/NoteKeeper/NoteKeeper/NoteKeeper.csproj
@@ -37,8 +37,8 @@
     <Reference Include="JetBrains.Annotations, Version=11.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <HintPath>..\packages\JetBrains.Annotations.11.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,12 +58,22 @@
     <Compile Include="BoolToVisibilityConverter.cs" />
     <Compile Include="FuzzySearchHelper.cs" />
     <Compile Include="HighlightTextControl.cs" />
-    <Compile Include="MainVM.cs" />
-    <Compile Include="NoteVM.cs" />
-    <Compile Include="ObservableObject.cs" />
+    <Compile Include="Model\NoteModel.cs" />
+    <Compile Include="ViewModel\MainVM.cs" />
+    <Compile Include="Model\TagModel.cs" />
+    <Compile Include="ViewModel\NoteEditViewModel.cs" />
+    <Compile Include="ViewModel\NoteVM.cs" />
+    <Compile Include="ViewModel\ObservableObject.cs" />
     <Compile Include="RelayCommand.cs" />
-    <Compile Include="TagVM.cs" />
-    <Page Include="MainWindow.xaml">
+    <Compile Include="ViewModel\TagsEditVM.cs" />
+    <Compile Include="ViewModel\TagVM.cs" />
+    <Compile Include="View\NoteEditView.xaml.cs">
+      <DependentUpon>NoteEditView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\TagsEditView.xaml.cs">
+      <DependentUpon>TagsEditView.xaml</DependentUpon>
+    </Compile>
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -71,10 +81,18 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\NoteEditView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\TagsEditView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
